                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 25-03-2006 fixed: bug in mplayer subtitle selection (more of a workaround).
 - 24-03-2006 fixed: Optimized xbmcGetCurrentlyPlaying() a bit, and changed sleep in xbmcCommand() from 100 to 10ms.
 - 24-03-2006 fixed: browsed subtitles would show up in wrong places.
 - 24-03-2006 fixed: icons for shares, dvd label update, dvd button in my programs.
 - 23-03-2006 fixed: dvdplayer would play out of sync for files with completly wrong frame rate in container. 5 < pts < 100 is considered valid
 - 23-03-2006 fixed: rgb renderer would leak memory on multiple calls to configure (video file change res/fps/aspect during playback)
 - 23-03-2006 fixed: Some of the random routines weren't very optimal.
 - 23-03-2006 fixed: dvdplayer would microstutter alot more than normal since 2006-03-11
 - 23-03-2006 fixed: my programs dvd share didn't have play disc entry.
 - 23-03-2006 fixed: old cdda rip path could be lost when browser was opened.
 - 23-03-2006 fixed: dvdplayer would fail to play urls with shout:// instead of http:// (fixes play using in Shoutcast Top 500)
 - 23-03-2006 fixed: file browser was broken since yesterday
 - 23-03-2006 fixed: dvdplayer would always assume an http stream was shoutcast.
 - 23-03-2006 fixed: dvdplayer would not end playback on read error when playing from file.
 - 23-03-2006 fixed: display of temparature texts in system info for non latin charsets
 - 23-03-2006 fixed: Trainer settings dialog couldn't take more than 8 buttons.
 - 23-03-2006 fixed: Skin reload would crash after trainer settings dialog was on screen.